--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    z-index: 2;
     bottom: 2rem;
 }
 .containerLogo{
@@ -23,7 +24,7 @@
 }
 .navbar-itens{
     text-decoration: none;
-    padding: 4rem;
+    padding: 0 4rem 0 4rem;
     font-size:1em ;
     color: rgba(248, 248, 248, 0.97);
     font-family: Hind;
@@ -37,4 +38,19 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+}
+.home{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50rem;
+    position: relative;
+    bottom: 4rem;
+}
+.imgsombra {
+    position: relative;
+    bottom: 37rem;
+    height: 780px;
+}
+.imghome {
 }
