--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -120,7 +120,7 @@ body {
 @media(max-width: 800px){
     .home h1 {
         font-size: 7vw;
-        
+        margin-left: 10vw;
     }
 
     
@@ -146,6 +146,7 @@ body {
     .home h2 {
         font-size: 6vw;
         margin-top: 50vw;
+        margin-left: 10vw;
     }
 }
 
