--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -150,3 +150,14 @@ body {
     }
 }
 
+
+
+.clientbar {
+    position: relative;
+    width: 100%;
+    height: 10.625rem;
+    background-color: #FECA32;
+    box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.25) inset, 0px -6px 6px 0px rgba(0, 0, 0, 0.25) inset;
+    background-image: linear-gradient(180deg, #FFB800 0%, #FED132 100%);;
+    top: 34.375rem;
+}
