--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,85 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@400;600&display=swap');
 
+/* Ajuste geral para Responsividade */
+html {
+    /* a cada 1 rem se considera 10px*/
+    font-size: 62.5%;
+}
+
 .navitens {
     border-radius: 50px;
     background: linear-gradient(180deg, #0459BC 0%, #0490BC 100%);
-    width: 45rem;
-    height: 4rem;
+    width: 80%;
+    height: 7rem;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
     z-index: 2;
-    bottom: 2rem;
+    bottom: 5rem;
 }
-
-@media(max-width: 768px) {
-
-    .navitens {
-        width: 70%;
-        height: 3rem;
-        font-size: 0.5em;
-    }
-}
-
-@media(max-width: 468px) {
-
-    .navitens {
-        width: 90%;
-        height: 3rem;
-        bottom: 3rem;
-    }
-}
-
 
 .containerLogo {
     background: #FECA32;
     width: 100%;
-    height: 6em;
+    height: 15rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 0 2rem 0;
-}
-
-@media(max-width:468px) {
-    .containerLogo {
-        padding: 0 0 3rem 0;
-    }
+    padding: 0 0 5rem 0;
 }
 
 .navbar-itens {
     text-decoration: none;
-    padding: 0 2.5rem 0 2.5rem;
-    font-size: 1em;
+    padding: 0 5rem 0 5rem;
+    font-size: 2.4rem;
     color: rgba(248, 248, 248, 0.97);
     font-family: Hind;
 }
 
-@media(max-width: 768px) {
-    .navbar-itens {
-        padding: 0 0.5em 0 0.5em;
-        font-size: 1.5em;
-    }
-}
-
-@media(max-width: 468px) {
-    .navbar-itens {
-        padding: 0 0.8em 0 0.8em;
-        font-size: 1.2em;
-    }
-}
-
 .logonav {
-    width: 10rem;
-    height: 3rem;
-
-    @media(max-width: 468px) {
-        width: 6rem;
-        height: 2rem;
-    }
+    width: 20rem;
+    height: 6rem;
 }
-
 
 .containerhome {
     display: flex;
@@ -89,96 +50,71 @@
     margin: 0;
     padding: 0;
     width: 100%;
+    height: 100%;
 }
 
 .home {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
-    height: 50rem;
+    height: 70rem;
     background-image: url("../../public/images/img-e-sombra.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
     position: relative;
-    bottom: 4rem;
-    @media (max-width:468px) {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-} 
-
-.text-home {
-    grid-area: 3 / 1 / 4 / 2;
-    line-height: 5em;
-    margin: 0 0 0 4rem;
-    @media (max-width:768px){
-        line-height: 4em;
-    }
-    @media (max-width:468px){
-        text-align: center;
-        margin: 0;
-        padding: 1.2rem;
-    }
+    bottom: 8rem;
 }
 
-
-.home h1 {
-    color: white;
-    font-family: 'Hind', sans-serif;
-    font-size: 3.5em;
-    margin: 0 0 0.7rem 0;
-    @media(max-width:768px){
-        font-size: 2.5rem;
-        line-height: 1.2em;
-    }
-    @media (max-width:468px){ 
-        font-size:2.2em;
-        margin: 0 0 0.5rem 0 ;
-    }
+.container-text-home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.4rem;
+    width: 50%;
+    line-height: 4rem;
+}
+.text-home{
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+}
+.text-home h1 {
+    font-family: Hind;
+    color: #FFF;
+    font-size: 4rem;
+    text-align: left;
+    text-transform: uppercase;
+}
+.text-home h2 {
+    font-size: 2.8rem;
+    font-family: Hind;
+    color: #FFF;
+    font-weight: 500;
+    line-height: 2.8rem;
+    text-transform: uppercase;
+}
+.text-home span {
+    color: #FECA32;
 }
 
-.home h1 span {
-    color: #FFB800;
-}
-
-
-.home h2 {
-    color: white;
-    font-family: 'Hind', sans-serif;
-    font-size: 1.5em;
-    line-height: 1.5em;
-    margin: 0 0 0.7rem 0;
-    @media (max-width:468px){
-        font-size: 0.8em;
-        margin: 0 0 0.5rem 0;
-    }
-}
-
-.home h2 span {
-    color: #FFB800;
-}
 
 .botao-home {
-    width: 15rem;
-    height: 3rem;
+    width: 30rem;
+    height: 5rem;
     border-radius: 12px;
     background: #88142C;
     color: #FFF;
     text-align: center;
     font-family: Hind;
-    font-size: 1em;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
     transition: box-shadow 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
-.botao-home:hover{
+
+.botao-home:hover {
     box-shadow: 0px 2px 10px rgba(255, 255, 255);
     background: #9E1C10;
     transform: scale(1.1);
@@ -191,4 +127,14 @@
     box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.25) inset, 0px -6px 6px 0px rgba(0, 0, 0, 0.25) inset;
     background-image: linear-gradient(180deg, #FFB800 0%, #FED132 100%);
     bottom: 5rem;
+}
+
+/* Responsividade do site */
+
+@media(max-width:768px) {
+    
+}
+
+@media(max-width:468px) {
+    
 }
