--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -59,7 +59,7 @@ html {
     align-items: center;
     width: 100%;
     height: 70rem;
-    background-image: url("../../public/images/img-e-sombra.png");
+    background-image: url("../images/img-e-sombra.png");
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -131,7 +131,46 @@ html {
 
 /* Responsividade do site */
 
+@media(max-width:1024px) {
+    html {
+        font-size: 50%;
+    }
+}
+
 @media(max-width:768px) {
+
+    html {
+        font-size: 40%;
+    }
+}
+
+@media(max-width:425px) {
+
+    .home {
+        bottom: 5rem;
+    }
+
+    .navitens {
+        display: none;
+    }
+
+    .menu-toggle .one, .two, .three {
+        background-color: #0459BC;
+        height: 5px;
+        width: 100%;
+        margin: 6px auto;
+    }
+
+    .menu-toggle {
+        width: 40px;
+        height: 30px;
+        margin-right: 20px;
+       
+        z-index: 2;
+    }
+
+    /*fullscreen*/
+
     
 }
 
