--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -16,14 +16,16 @@ html {
     justify-content: center;
     position: relative;
     z-index: 2;
-    bottom: 5rem;
+    top: 3rem;
+    margin: 0;
 }
 
 .containerLogo {
     background: #FECA32;
     width: 100%;
-    height: 15rem;
+    height: 25rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 0 0 5rem 0;
@@ -43,14 +45,11 @@ html {
 }
 
 .containerhome {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .home {
@@ -58,7 +57,7 @@ html {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 70rem;
+    height: 90%;
     background-image: url("../images/img-e-sombra.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -74,18 +73,20 @@ html {
     width: 50%;
     line-height: 4rem;
 }
-.text-home{
+
+.text-home {
     display: flex;
     flex-direction: column;
     gap: 2.4rem;
 }
+
 .text-home h1 {
     font-family: Hind;
     color: #FFF;
     font-size: 4rem;
-    text-align: left;
     text-transform: uppercase;
 }
+
 .text-home h2 {
     font-size: 2.8rem;
     font-family: Hind;
@@ -94,6 +95,7 @@ html {
     line-height: 2.8rem;
     text-transform: uppercase;
 }
+
 .text-home span {
     color: #FECA32;
 }
@@ -123,10 +125,14 @@ html {
 .clientbar {
     position: relative;
     width: 100%;
-    height: 15rem;
+    height: 30%;
     box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.25) inset, 0px -6px 6px 0px rgba(0, 0, 0, 0.25) inset;
     background-image: linear-gradient(180deg, #FFB800 0%, #FED132 100%);
-    bottom: 5rem;
+    bottom: 8rem;
+}
+
+.navitens-mobile {
+    display: none;
 }
 
 /* Responsividade do site */
@@ -139,13 +145,61 @@ html {
 
 @media(max-width:768px) {
 
+
+
     html {
         font-size: 40%;
     }
 }
 
-@media(max-width:425px) {
+@media(max-width:468px) {
 
+    body {
+        height: 100vh;
+    }
+
+    .containerhome {
+        height: 100vh;
+    }
+
+    .home {
+        height: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-image: url("../images/img-home-celular.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+     
+    }
+
+    .text-home {
+        text-align: center;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .text-home h1 {
+        font-size: 7rem;
+        line-height: 8rem;
+        font-weight: 900;
+    }
+
+    .text-home h2 {
+        font-size: 3rem;
+        line-height: 4rem;
+        font-weight: 500;
+    }
+
+    .container-text-home {
+        width: 80%;
+        display: flex;
+    }
+    .clientbar{
+        height: 20rem;
+    }
     html {
         font-size: 30%;
     }
@@ -157,19 +211,46 @@ html {
     .navitens {
         display: none;
     }
+    .containerLogo {
+        height: 12%;
+    }
+    .botao-home{
+        width: 40rem;
+        height: 7rem;
+        font-size: 3rem;
+    }
 
-    .menu-toggle .one, .two, .three {
+    .menu-toggle .one,
+    .two,
+    .three {
         background-color: #0459BC;
-        height: 5px;
+        height: 4px;
         width: 100%;
-        margin: 6px auto;
+        margin: 3.5px auto;
+        transition-duration: 0.3s;
+    }
+
+    .containerLogo.on .menu-toggle .one {
+        transform: rotate(45deg) translate(6px, 6px);
+
+    }
+
+    .containerLogo.on .menu-toggle .two {
+        opacity: 0;
+    }
+
+    .containerLogo.on .menu-toggle .three {
+        transform: rotate(-45deg) translate(5px, -6px);
     }
 
     .menu-toggle {
-        width: 40px;
-        height: 30px;
+        width: 30px;
+        height: 20px;
         margin-right: 20px;
-       
+        position: absolute;
+        right: 0px;
+        top: 16.8px;
+
         z-index: 2;
     }
 
@@ -186,18 +267,37 @@ html {
         z-index: 10;
 
         background-color: #FECA32;
-    }
 
-    .logonav {
-        display: none;
-    }
-
-    .navitens {
-        background: #FECA32;
-        padding: 0;
         display: flex;
         flex-direction: column;
-        z-index: 10;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logonavhidden {
+        opacity: 0;
+    }
+
+    .navitens-mobile {
+        display: block;
+        width: 100%;
+
+    }
+
+    .navitens-mobile ul {}
+
+    .navbar-itens {
+        padding: 0;
+        display: block;
+        text-align: center;
+        font-size: 5rem;
+        line-height: 9rem;
+        color: #0459BC;
+        font-weight: 900;
+
+    }
+
+    .navitens-mobilehidden {
+        display: none;
     }
 }
-
