--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -16,24 +16,26 @@ html {
     justify-content: center;
     position: relative;
     z-index: 2;
-    top: 3rem;
+    bottom: 0rem;
     margin: 0;
+    grid-area: 2 / 1 / 3 / 2;
 }
 
 .containerLogo {
     background: #FECA32;
     width: 100%;
-    height: 25rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0 0 5rem 0;
+    height: 20rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    place-items: center;
 }
 
 .navbar-itens {
     text-decoration: none;
-    padding: 0 5rem 0 5rem;
+    padding: 0 2rem 0 2rem;
     font-size: 2.4rem;
     color: rgba(248, 248, 248, 0.97);
     font-family: Hind;
@@ -42,10 +44,10 @@ html {
 .logonav {
     width: 20rem;
     height: 6rem;
+    grid-area: 1 / 1 / 2 / 2;
 }
 
 .containerhome {
-
     margin: 0;
     padding: 0;
     width: 100%;
@@ -57,12 +59,12 @@ html {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 90%;
+    height: 75rem;
     background-image: url("../images/img-e-sombra.png");
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    bottom: 8rem;
+    bottom: 4rem;
 }
 
 .container-text-home {
@@ -125,10 +127,10 @@ html {
 .clientbar {
     position: relative;
     width: 100%;
-    height: 30%;
+    height: 40%;
     box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.25) inset, 0px -6px 6px 0px rgba(0, 0, 0, 0.25) inset;
     background-image: linear-gradient(180deg, #FFB800 0%, #FED132 100%);
-    bottom: 8rem;
+    bottom: 4rem;
 }
 
 .navitens-mobile {
@@ -160,6 +162,9 @@ html {
 
     .containerhome {
         height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .home {
@@ -171,7 +176,7 @@ html {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-     
+
     }
 
     .text-home {
@@ -190,33 +195,46 @@ html {
     .text-home h2 {
         font-size: 3rem;
         line-height: 4rem;
-        font-weight: 500;
+        font-weight: 700;
     }
 
     .container-text-home {
         width: 80%;
         display: flex;
     }
-    .clientbar{
+
+    .clientbar {
         height: 20rem;
+        bottom: 0;
     }
+
     html {
         font-size: 30%;
     }
 
     .home {
-        bottom: 5rem;
+        bottom: 0rem;
+
     }
 
     .navitens {
         display: none;
     }
+
     .containerLogo {
-        height: 12%;
+        height: 10%;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 1fr;
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        place-items: center;
     }
-    .botao-home{
-        width: 40rem;
-        height: 7rem;
+
+    .botao-home {
+        width: 43rem;
+        height: 8rem;
         font-size: 3rem;
     }
 
@@ -246,12 +264,15 @@ html {
     .menu-toggle {
         width: 30px;
         height: 20px;
-        margin-right: 20px;
-        position: absolute;
-        right: 0px;
-        top: 16.8px;
+        margin: 0 0 5px 20px;
+        grid-area: 1 / 3 / 2 / 4;
+    }
 
-        z-index: 2;
+    .menu-toggleFullSize {
+        position: absolute;
+        right: 0;
+        top: 20px;
+        margin-right: 20px;
     }
 
     /*fullscreen*/
@@ -274,6 +295,10 @@ html {
         align-items: center;
     }
 
+    .logonav {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
     .logonavhidden {
         opacity: 0;
     }
@@ -283,8 +308,6 @@ html {
         width: 100%;
 
     }
-
-    .navitens-mobile ul {}
 
     .navbar-itens {
         padding: 0;
