--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -127,7 +127,7 @@ html {
 .clientbar {
     position: relative;
     width: 100%;
-    height: 40%;
+    height: 20rem;
     box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.25) inset, 0px -6px 6px 0px rgba(0, 0, 0, 0.25) inset;
     background-image: linear-gradient(180deg, #FFB800 0%, #FED132 100%);
     bottom: 4rem;
@@ -168,7 +168,7 @@ html {
     }
 
     .home {
-        height: 80%;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -176,7 +176,7 @@ html {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-
+        bottom: 0rem;
     }
 
     .text-home {
@@ -211,18 +211,12 @@ html {
     html {
         font-size: 30%;
     }
-
-    .home {
-        bottom: 0rem;
-
-    }
-
     .navitens {
         display: none;
     }
 
     .containerLogo {
-        height: 10%;
+        height: 15rem;
         padding: 0;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
