--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -59,7 +59,7 @@ html {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 75rem;
+    height: 75vh;
     background-image: url("../images/img-e-sombra.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -73,7 +73,8 @@ html {
     align-items: center;
     gap: 2.4rem;
     width: 50%;
-    line-height: 4rem;
+    line-height: 5rem;
+    padding: 4rem;
 }
 
 .text-home {
@@ -85,16 +86,17 @@ html {
 .text-home h1 {
     font-family: Hind;
     color: #FFF;
-    font-size: 4rem;
+    font-size: clamp(2rem, 4rem + 1vw, 5rem);  
     text-transform: uppercase;
+    line-height: 5rem;
 }
 
 .text-home h2 {
-    font-size: 2.8rem;
+    font-size: clamp(1rem, 2.8rem + 1vw, 3.5rem); 
     font-family: Hind;
     color: #FFF;
     font-weight: 500;
-    line-height: 2.8rem;
+    line-height: 4rem;
     text-transform: uppercase;
 }
 
@@ -168,7 +170,7 @@ html {
     }
 
     .home {
-        height: 100%;
+        height: 90vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -243,7 +245,7 @@ html {
     }
 
     .containerLogo.on .menu-toggle .one {
-        transform: rotate(45deg) translate(6px, 6px);
+        transform: rotate(45deg) translate(5px, 5px);
 
     }
 
@@ -266,7 +268,7 @@ html {
         position: absolute;
         right: 0;
         top: 20px;
-        margin-right: 20px;
+        margin-right: 45px;
     }
 
     /*fullscreen*/
