--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -189,14 +189,14 @@ html {
     }
 
     .text-home h1 {
-        font-size: 7rem;
-        line-height: 8rem;
+        font-size: 6em;
+        line-height: 1.2em;
         font-weight: 900;
     }
 
     .text-home h2 {
-        font-size: 3rem;
-        line-height: 4rem;
+        font-size: 3em;
+        line-height: 1.5em;
         font-weight: 700;
     }
 
@@ -211,7 +211,7 @@ html {
     }
 
     html {
-        font-size: 30%;
+        font-size: 25%;
     }
     .navitens {
         display: none;
@@ -229,9 +229,9 @@ html {
     }
 
     .botao-home {
-        width: 43rem;
-        height: 8rem;
-        font-size: 3rem;
+        width: 15em;
+        height: 2.5em;
+        font-size: 3em;
     }
 
     .menu-toggle .one,
